fix search input z-index

--- a/web/src/search/input/QueryInput.scss
+++ b/web/src/search/input/QueryInput.scss
@@ -3,7 +3,6 @@
 .query-input2 {
     flex: 1 1 auto;
     position: relative;
-    z-index: 4;
 
     // The width of the toggle icons in the query input.
     $toggle-icon-width: 24px;
